Refactoring towards first tag

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,5 +5,9 @@ requirements:
   - conda
 configuration:
   properties:
-    env:
+    environment:
       type: string
+    update:
+      type: boolean
+  required:
+    - environment
